Removed bower nonsense

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel='stylesheet', href='src/css/style.css')>
   <title>chris quotes</title>
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="src/js/jquery.min.js"></script>
 </head>
 <body>
 <div id="main">
