--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <h3 id="name">-chris rhoton</h3>
   <image id="headshot" src="img/chris.png"></image>
   <p>refresh for more chris quotes</p>
+  current quote count:
+  <span id="quote-count">49</span>
 </div>
 <script src="src/js/init.js" type="text/javascript"></script>
 </body>
