--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
   <link rel='stylesheet', href='src/css/style.css')>
   <title>chris quotes</title>
   <script src="src/js/jquery.min.js"></script>
+  <script src="src/js/jQueryRotate.js"></script>
+  <script src="src/js/jquery.vide.min.js"></script>
 </head>
-<body>
+<body style="height: 100%; margin: auto; padding: 0;" data-vide-bg="img/back.webm" data-vide-options="loop: true, muted: true, position: 0% 0%">
 <div id="main">
   <h1 id="quote">"juh-queer-ee"</h1>
   <h3 id="name">-chris rhoton</h3>
   <image id="headshot" src="img/chris.png"></image>
   <p>refresh for more chris quotes</p>
-  current quote count:
+  <p>current quote count:</p>
   <span id="quote-count">49</span>
+  <p>dont click the image</p>
+  <a href="https://github.com/zakarhino/chrisquotegenerator" id="source">fork and add quotes here.</a>
 </div>
 <script src="src/js/init.js" type="text/javascript"></script>
 </body>
