Fixed white space margin bug

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
   <script src="src/js/jQueryRotate.js"></script>
   <script src="src/js/jquery.vide.min.js"></script>
 </head>
-<body style="height: 100%; margin: auto; padding: 0;" data-vide-bg="img/back.webm" data-vide-options="loop: true, muted: true, position: 0% 0%">
-<div id="main">
-  <h1 id="quote">"juh-queer-ee"</h1>
-  <h3 id="name">-chris rhoton</h3>
-  <image id="headshot" src="img/chris.png"></image>
-  <p>refresh for more chris quotes</p>
-  <p>current quote count:</p>
-  <span id="quote-count">49</span>
-  <p>dont click the image</p>
+<body>
+<div id="video" style="height: 100%; margin: auto; padding: 0;" data-vide-bg="img/back.webm" data-vide-options="loop: true, muted: true, position: 0% 0%">
+  <div id="main">
+    <h1 id="quote">"juh-queer-ee"</h1>
+    <h3 id="name">-chris rhoton</h3>
+    <image id="headshot" src="img/chris.png"></image>
+    <p>refresh for more chris quotes</p>
+    <p>current quote count:</p>
+    <span id="quote-count">49</span>
+    <p>dont click the image</p>
+  </div>
 </div>
 <script src="src/js/init.js" type="text/javascript"></script>
 </body>
