--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="main">
     <h1 id="quote">"juh-queer-ee"</h1>
     <h3 id="name">-chris rhoton</h3>
-    <image id="headshot" src="img/chris.png"></image>
+    <image id="headshot" src="img/chrisrhoton.png"></image>
     <p>refresh for more chris quotes</p>
     <p>current quote count:</p>
     <span id="quote-count">49</span>
