--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel='stylesheet', href='src/css/style.css')>
   <title>chris quotes</title>
+  <link rel="shortcut icon" href="img/favicon.ico" />
   <script src="src/js/jquery.min.js"></script>
   <script src="src/js/jQueryRotate.js"></script>
   <script src="src/js/jquery.vide.min.js"></script>
